@@ -1,6 +1,9 @@
 Camlp5 Version 6.12:
 --------------------
 
+* [06 Sep 13] Added flag Grammar.utf8_print to print grammars entries
+  (with Grammar.Entry.print) displaying strings in utf-8 (default: True).
+  Usefull e.g. for Coq in command 'Print Grammar constr' when using utf8.
 * [27 Aug 13] Fixed bug in normal syntax: "let f { x } = ...", "{ x }"
   and "let open ..." were refused.
 
